--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "firebase": "^10.4.0",
     "framer": "^2.3.0",
     "framer-motion": "^10.16.4",
     "motion": "^10.16.2",
