--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.0",
+    "axios": "^1.5.0",   
     "firebase": "^10.4.0",
     "framer": "^2.3.0",
     "framer-motion": "^10.16.4",
     "motion": "^10.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.15.0",
     "react-router-hash-link": "^2.4.3",
@@ -25,8 +26,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
+    "serve": "react-dotenv && serve build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -47,8 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
+  }, 
   "devDependencies": {
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3"   
   }
 }
